Add Get User Add Create User Add Update User Add Delete User Add User Login Add Jwt Token AdminInterceptor Clean mvnw

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-HELP.md
-target/
+**/target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -33,3 +32,4 @@ build/
 .vscode/
 
 datasource.db
+rebel.xml
