--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     username: ${one.moonx.datasource.username}
     password: ${one.moonx.datasource.password}
-    url: jdbc:mysql://${one.moonx.datasource.host}:${one.moonx.datasource.port}/${one.moonx.datasource.database}?
+    url: jdbc:mysql://${one.moonx.datasource.host}:${one.moonx.datasource.port}/${one.moonx.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true&rewriteBatchedStatements=true
     driver-class-name: ${one.moonx.datasource.driver-class-name}
   sql:
     init:
@@ -16,6 +16,12 @@ spring:
       mode: always
       data-locations: classpath:data.sql
       schema-locations: classpath:schema.sql
+  data:
+    redis:
+      host: ${one.moonx.redis.host}
+      port: ${one.moonx.redis.port}
+      password: ${one.moonx.redis.password}
+      database: ${one.moonx.redis.database}
 
 # mybatis-plus 配置
 mybatis-plus:
