--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
-**/target/
-!.mvn/wrapper/maven-wrapper.jar
+target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
 .apt_generated
 .classpath
 .factorypath
@@ -11,12 +19,6 @@
 .settings
 .springBeans
 .sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,5 +33,8 @@ build/
 ### VS Code ###
 .vscode/
 
-rebel.xml
-/src/main/resources/application-dev.yml
+### Mac OS ###
+.DS_Store
+
+### My ###
+application-dev.yml
