--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,4 +37,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: spring-boot-app
-          path: target/*.jar
+          path: nav-server/target/*.jar
