--- a/nav-server/src/main/resources/application.yml
+++ b/nav-server/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     password: ${one.moonx.datasource.password}
     url: jdbc:mysql://${one.moonx.datasource.host}:${one.moonx.datasource.port}/${one.moonx.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true&rewriteBatchedStatements=true
     driver-class-name: ${one.moonx.datasource.driver-class-name}
+    hikari:
+      max-lifetime: 300000
   sql:
     init:
       continue-on-error: true
