--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Set BUILDKIT_PROGRESS to plain
+        run: echo "BUILDKIT_PROGRESS=plain" >> $GITHUB_ENV
+
       - name: Build and push Docker Hub
         uses: docker/build-push-action@v2
         with:
